# hippo

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  batch_vs_serial.py
benchmarks/contradiction/: README.md  runner.py
benchmarks/contradiction/adapters/: base.py  hippo_adapter.py  mem0_adapter.py
benchmarks/contradiction/datasets/: .gitignore  handcrafted.json  locomo_loader.py
benchmarks/contradiction/scoring/: contradiction_scorer.py  llm_judge.py
examples/: demo.py  demo_auto_importance.py
src/hippo/: __init__.py  client.py  conflict.py  consolidation.py  exceptions.py  importance.py  models.py  retrieval.py  schema.sql
src/hippo/embedders/: __init__.py  base.py  openai.py  sentence_transformers.py
src/hippo/llm/: __init__.py  base.py  groq.py  openai.py
tests/: conftest.py  test_batch.py  test_benchmark.py  test_client.py  test_conflict.py  test_embedders.py  test_importance.py  test_retrieval.py
