[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hippo-memory"
version = "0.1.0"
description = "A memory layer for AI agents — handles conflict resolution so your agent stops believing two contradictory things at once"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "llm", "rag", "postgres", "pgvector"]
authors = [{ name = "Hippo Contributors" }]

classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
]

dependencies = [
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0",
    "openai>=1.0",
    "pgvector>=0.2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
local = [
    "sentence-transformers>=3.0",
]
groq = [
    "groq>=0.11",
]

[project.urls]
Homepage   = "https://github.com/<YOUR_USERNAME>/hippo"
Repository = "https://github.com/<YOUR_USERNAME>/hippo"
Issues     = "https://github.com/<YOUR_USERNAME>/hippo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/hippo"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that download/load ML models (deselect with -m 'not slow')",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line too long — ruff format handles this
    "B008",   # do not perform function calls in default args
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert is fine in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
